fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 .custom-hover-nav:hover{
   border-bottom: 2.5px solid black;
